Preparation and deployment on the server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=/home/pavel/IdeaProjects/sweater/uploads
+upload.path=/home/pavel/uploads
 
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -17,9 +17,11 @@ spring.mail.username=pavel.mno4@yandex.ru
 spring.mail.password=7861pasdrt
 spring.mail.port=465
 spring.mail.protocol=smtps
-mail.debug=true
+mail.debug=false
 
 recaptcha.secret=6LcB7PsUAAAAAGpMyIHz9_xDuKfraurGo72r9cvi
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
+
+hostname=192.168.1.41
