--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 
-upload.path=/home/pavel/uploads
+upload.path=/home/pavel/IdeaProjects/sweater/uploads
 
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -17,11 +17,11 @@ spring.mail.username=pavel.mno4@yandex.ru
 spring.mail.password=7861pasdrt
 spring.mail.port=465
 spring.mail.protocol=smtps
-mail.debug=false
+mail.debug=true
 
 recaptcha.secret=6LcB7PsUAAAAAGpMyIHz9_xDuKfraurGo72r9cvi
 
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
-hostname=192.168.1.41
+hostname=localhost:8080
